Fix: some minor fixes
